<resources>
    <string name="app_name">RPGMobileGame</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="equipment">Equipment</string>
    <string name="wisdom">Wisdom:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="vitality">Vitality:</string>
    <string name="agility">Agility:</string>
    <string name="strength">Strength:</string>
    <string name="name">Name:</string>
    <string name="character_info">Character Info:</string>
</resources>
